added gallery with fancybox

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>OMPIXS - About</title>
+  <title>OMPIXS - Services</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,7 +69,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profile.html">Profile</a>
@@ -109,7 +109,7 @@
                 <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" href="contact.html">Contact</a>
               </li>
           </ul>
           <!-- <form class="d-flex">
@@ -136,85 +136,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-7">
-            <h1 class="text-barlow text-uppercase"><span class="text-green">About</span> <span class="text-white">Ompixs</span></h1>
-            <p class="text-white">From concept to delivery, Optical Motion Pictures offers full production services that can be tailored to fit all budgets and requirements necessary!</p>
+            <h1 class="text-barlow text-uppercase"><span class="text-green">Contact</span> <span class="text-white">Us</span></h1>
+            <p class="text-white">Get in Touch with Optical Motion Pictures Limited Today. Reach out to us by filling the form below or through any of our contact details provided below.</p>
         </div>
         </div>
         </div>
     </div>
-
-    <section class="welcome-area">
-        <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-           <h2><span class="text-green">ABOUT</span> <span class="text-white"> OPTICAL MOTION PICTURES</span> <span class="text-red">(OMPIXS)</span></h2>
-           <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
-           <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
-           <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
-           <p>Ompixs offers a wide range of services, including multimedia and live events, film and drama production, corporate profiles and documentaries, reality and film shows, commercials and online content, and live streaming, among others. We take pride in our commitment to quality and providing a customer-centric experience. Our team is dedicated to serving clients and ensuring a memorable production experience.</p>
-        </div>
-      </section>
-
-      <section class="services-area">
-        <div class="container">
-           <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">SERVICES</span></h2>
-           <!-- <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p> -->
-  
-           <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
-            <div class="col-md-6">
-              <a href="#un" class="text-decoration-none">
-               <div class="service-content">
-                  <span><i class="la la-plus"></i> Light</span>
-               </div>
-              </a>
-            </div>
-            <div class="col-md-6">
-              <a href="#un" class="text-decoration-none">
-              <div class="service-content">
-                 <span><i class="la la-plus"></i> Audio Mixers</span>
-              </div>
-            </a>
-           </div>
-           <div class="col-md-6">
-            <a href="#un" class="text-decoration-none">
-            <div class="service-content">
-               <span><i class="la la-plus"></i> Engineering Support</span>
-            </div>
-          </a>
-         </div>
-         <div class="col-md-6">
-          <a href="#un" class="text-decoration-none">
-          <div class="service-content">
-             <span><i class="la la-plus"></i> Local Crew Sourcing</span>
-          </div>
-        </a>
-       </div>
-       <!-- <div class="col-md-6">
-        <div class="service-content">
-           <span><i class="la la-plus"></i> Documentary</span>
-        </div>
-     </div>
-     <div class="col-md-6">
-      <div class="service-content">
-         <span><i class="la la-plus"></i> Cooperate portfolio & events</span>
-      </div>
-   </div>
-   <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Wedding Videography service</span>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Reality TV Show</span>
-    </div>
-  </div> -->
-           </div>
-  
-           <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
-            <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-          </div> -->
-  
-        </div>
-      </section>
 
       <section class="contact-area wow fadeInUp" data-wow-duration="1.5s">
         <div class="container">
