--- a/profile.html
+++ b/profile.html
@@ -87,7 +87,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link" href="#" id="dropdownId"
+                <a class="nav-link" href="services.html" id="dropdownId"
                   aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
@@ -103,13 +103,13 @@
                 <a class="nav-link" href="#">Credits</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link" href="projects.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
           </ul>
           <!-- <form class="d-flex">
