--- a/services.html
+++ b/services.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>OMPIXS - About</title>
+  <title>OMPIXS - Services</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -69,7 +69,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profile.html">Profile</a>
@@ -87,7 +87,7 @@
                 </div>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link" href="services.html" id="dropdownId"
+                <a class="nav-link active" href="services.html" id="dropdownId"
                   aria-haspopup="true" aria-expanded="false" class="camera-drop">Services</a>
                   <div class="abs-dropicon d-lg-none">
                     <span class="fa fa-angle-right text-white" id="dropspan2" onclick="getdropdown(2)"></span>
@@ -136,22 +136,12 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-7">
-            <h1 class="text-barlow text-uppercase"><span class="text-green">About</span> <span class="text-white">Ompixs</span></h1>
-            <p class="text-white">From concept to delivery, Optical Motion Pictures offers full production services that can be tailored to fit all budgets and requirements necessary!</p>
+            <h1 class="text-barlow text-uppercase"><span class="text-green">Our</span> <span class="text-white">Services</span></h1>
+            <p class="text-white">At OMPIXS we offer full production services for all kinds of projects. From start to finish we can take care of everything in-house or we can provide individual roles as needed.</p>
         </div>
         </div>
         </div>
     </div>
-
-    <section class="welcome-area">
-        <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-           <h2><span class="text-green">ABOUT</span> <span class="text-white"> OPTICAL MOTION PICTURES</span> <span class="text-red">(OMPIXS)</span></h2>
-           <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
-           <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
-           <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
-           <p>Ompixs offers a wide range of services, including multimedia and live events, film and drama production, corporate profiles and documentaries, reality and film shows, commercials and online content, and live streaming, among others. We take pride in our commitment to quality and providing a customer-centric experience. Our team is dedicated to serving clients and ensuring a memorable production experience.</p>
-        </div>
-      </section>
 
       <section class="services-area">
         <div class="container">
