--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>OMPIXS - About</title>
+  <title>OMPIXS - Gallery</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -26,6 +26,8 @@
   <!-- Slick CSS -->
   <link rel="stylesheet" href="slick-1.8.1/slick-1.8.1/slick/slick.css">
   <link rel="stylesheet" href="slick-1.8.1/slick-1.8.1/slick/slick-theme.css">
+  <!-- Fancybox CSS -->
+  <link rel="stylesheet" href="fancybox-master/fancybox-master/dist/jquery.fancybox.min.css">
 
 </head>
 
@@ -69,7 +71,7 @@
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="profile.html">Profile</a>
@@ -106,7 +108,7 @@
                 <a class="nav-link" href="projects.html">Projects</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="gallery.html">Gallery</a>
+                <a class="nav-link active" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
@@ -136,175 +138,78 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-7">
-            <h1 class="text-barlow text-uppercase"><span class="text-green">About</span> <span class="text-white">Ompixs</span></h1>
-            <p class="text-white">From concept to delivery, Optical Motion Pictures offers full production services that can be tailored to fit all budgets and requirements necessary!</p>
+            <h1 class="text-barlow text-uppercase"><span class="text-white">Gallery</span></h1>
+            <p class="text-white">A Gallery of Photos of Optical Motion Pictures is represented below. It shows event coverages and other videography services rendered by OMPIXS.</p>
         </div>
         </div>
         </div>
     </div>
 
-    <section class="welcome-area">
-        <div class="container text-center wow fadeInUp" data-wow-duration="1s">
-           <h2><span class="text-green">ABOUT</span> <span class="text-white"> OPTICAL MOTION PICTURES</span> <span class="text-red">(OMPIXS)</span></h2>
-           <p class="mt-2">Ompixs is a Nigerian production company based in Lagos that specializes in providing high-quality audiovisual productions. We have established ourselves as a one-stop-production hub, offering a wide range of services from pre-production to post-production and distribution.</p>
-           <p>Over the years, Ompixs has gained a reputation for delivering excellent technical support services to major TV and online content producers in Nigeria. We have partnered with renowned companies such as Africa Magic, Showmax, and Multichoice Nigeria, and have contributed to the production of popular shows including BBN, Date my Family Nigeria, Shoot your shot Nigeria, Unmarried, and What Will People Say game shows.</p>
-           <p>Our mission is to become the top indigenous Nigerian and African private syndicating production hub. We aim to excel in all aspects of content production, from technical expertise to manpower, and from pre-production to distribution and broadcasting worldwide. Ompixs strives to consistently deliver professional and high-quality work, placing emphasis on customer satisfaction.</p>
-           <p>Ompixs offers a wide range of services, including multimedia and live events, film and drama production, corporate profiles and documentaries, reality and film shows, commercials and online content, and live streaming, among others. We take pride in our commitment to quality and providing a customer-centric experience. Our team is dedicated to serving clients and ensuring a memorable production experience.</p>
-        </div>
-      </section>
-
-      <section class="services-area">
+    <section class="project-area">
         <div class="container">
-           <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-white">OUR</span> <span class="text-green">SERVICES</span></h2>
-           <!-- <p class="text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.2s">Below are the Services Rendered by Optical Motion Pictures (OMPIXS)</p> -->
-  
-           <div class="row wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.4s">
-            <div class="col-md-6">
-              <a href="#un" class="text-decoration-none">
-               <div class="service-content">
-                  <span><i class="la la-plus"></i> Light</span>
-               </div>
-              </a>
+         <h2 class="text-barlow text-center font-600 wow fadeInUp" data-wow-duration="1.5s"><span class="text-green">GALLERY</span></h2>
+
+        <div class="row">
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/36DA0E1A-07B8-4279-8723-C35E5C2BF55B.JPG" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/36DA0E1A-07B8-4279-8723-C35E5C2BF55B.JPG" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
             </div>
-            <div class="col-md-6">
-              <a href="#un" class="text-decoration-none">
-              <div class="service-content">
-                 <span><i class="la la-plus"></i> Audio Mixers</span>
-              </div>
-            </a>
-           </div>
-           <div class="col-md-6">
-            <a href="#un" class="text-decoration-none">
-            <div class="service-content">
-               <span><i class="la la-plus"></i> Engineering Support</span>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/65fd1285-21f4-447e-b2ab-6b90c05c0b01.JPG" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/65fd1285-21f4-447e-b2ab-6b90c05c0b01.JPG" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
             </div>
-          </a>
-         </div>
-         <div class="col-md-6">
-          <a href="#un" class="text-decoration-none">
-          <div class="service-content">
-             <span><i class="la la-plus"></i> Local Crew Sourcing</span>
-          </div>
-        </a>
-       </div>
-       <!-- <div class="col-md-6">
-        <div class="service-content">
-           <span><i class="la la-plus"></i> Documentary</span>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/8528e361-4f67-4aef-b0f9-350a8f7d1012.JPG" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/8528e361-4f67-4aef-b0f9-350a8f7d1012.JPG" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_0709.jpg" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_0709.jpg" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_0897.jpg" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_0897.jpg" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_1062.jpg" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_1062.jpg" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_1221.jpg" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_1221.jpg" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_1311.jpg" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_1311.jpg" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
+            <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp text-center" data-wow-duration="1.5s">
+                <a href="img/IMG_1490.JPG" data-fancybox="gallery" data-caption="Ompixs Videography">
+                    <img src="img/IMG_1490.JPG" alt="ompixs" class="img img-fluid gallery-img">
+                </a>
+            </div>
+
         </div>
-     </div>
-     <div class="col-md-6">
-      <div class="service-content">
-         <span><i class="la la-plus"></i> Cooperate portfolio & events</span>
-      </div>
-   </div>
-   <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Wedding Videography service</span>
+
     </div>
-  </div>
-  <div class="col-md-6">
-    <div class="service-content">
-       <span><i class="la la-plus"></i> Reality TV Show</span>
-    </div>
-  </div> -->
-           </div>
-  
-           <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
-            <a href="#un" class="btn btn-about">See All <i class="la la-long-arrow-right"></i></a>
-          </div> -->
-  
-        </div>
-      </section>
 
-      <section class="contact-area wow fadeInUp" data-wow-duration="1.5s">
-        <div class="container">
-
-          <h1 class="text-berbas text-white">Contact Us</h1>
-          <div class="red-bot"></div>
-
-          <div class="row">
-
-            <div class="col-lg-9 order-last order-lg-first">
-
-              <form action="" method="post">
-
-               <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3 mt-md-0">
-                    <label for="name" class="form-label">Name: </label>
-                    <input type="text" name="name" id="name" class="form-control" placeholder="Enter Name" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3 mt-md-0">
-                    <label for="email" class="form-label">Email: </label>
-                    <input type="email" name="email" id="email" class="form-control" placeholder="Enter Email" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3">
-                    <label for="tel" class="form-label">Phone Number: </label>
-                    <input type="tel" name="tel" id="tel" class="form-control" placeholder="Enter Phone Number" required>
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group contact-group mt-3">
-                    <label for="topic" class="form-label">Subject: </label>
-                    <input type="topic" name="topic" id="topic" class="form-control" placeholder="Enter Subject" required>
-                  </div>
-                </div>
-                <div class="col-md-12">
-                  <div class="form-group contact-group mt-3">
-                    <label for="msg" class="form-label">Message: </label>
-                    <textarea name="msg" id="msg" cols="30" rows="8" class="form-control" placeholder="Your Message" required></textarea>
-                  </div>
-                </div>
-               </div>
-
-               <div class="mt-4">
-                  <button type="submit" class="btn btn-submit">Submit <i class="fa fa-paper-plane-o"></i></button>
-               </div>
-
-              </form>
-
-            </div>
-
-            <div class="col-lg-3 order-first order-lg-last mt-2 mt-mt-0">
-
-              <div class="contact-info">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-home"></i></span> <span class="text-white">Address</span></h5>
-                <p class="font-14">Banana Island, Lagos, Nigeria.</p>
-              </div>
-
-              <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-envelope-o"></i></span> <span class="text-white">Email</span></h5>
-                <p class="font-14">support@ompixs.com</p>
-              </div>
-
-              <div class="contact-info mt-3">
-                <h5 class="text-barlow text-uppercase font-600"><span class="text-green me-1"><i class="fa fa-phone"></i></span> <span class="text-white">Phone Number</span></h5>
-                <p class="font-14">+234-343-463-4839</p>
-              </div>
-
-            </div>
-
-          </div>
-
-        </div>
-    </section>
-
-    <section class="profile-area">
-        <div class="container">
-         <div class="row justify-content-center">
-           <div class="col-lg-7 col-md-10 text-center">
-              <h2 class="text-white text-roboto-bold">Take a Drive through our Successful Projects and Acheivements so far.</h2>
-              <div class="mt-3">
-               <a href="#un" class="btn btn-prof text-barlow text-uppercase">See Our Projects <i class="la la-long-arrow-right"></i></a>
-           </div>
-           </div>
-         </div>
-        </div>
-     </section>
+   </section>
 
     <section></section>
 
@@ -410,6 +315,9 @@
         <script src="slick-js/jquery-1.11.0.min.js"></script>
         <script src="slick-js/jquery-migrate-1.2.1.min.js"></script>
         <script src="slick-1.8.1/slick-1.8.1/slick/slick.min.js"></script>
+
+      <!-- Fancybox JS -->
+      <script src="fancybox-master/fancybox-master/dist/jquery.fancybox.min.js"></script>
 
       <!-- Custom JS -->
       <script src="js/script.js"></script>
