--- a/show.html
+++ b/show.html
@@ -207,12 +207,25 @@
                             <input type="address" name="address" id="address" class="form-control" placeholder="Enter Address" required>
                         </div>
                         <div class="form-group rental-group mt-2">
-                            <label for="days" class="form-label">Number of Days </label>
-                            <select name="days" id="days" class="select-control required">
+                            <label for="qty" class="form-label">Quantity </label>
+                            <select name="qty" id="qty" class="select-control required">
                                 <option value="1">1</option>
                                 <option value="2">2</option>
                                 <option value="3">3</option>
-                                <option value="7">7</option>
+                                <option value="4">4</option>
+                                <option value="5">5</option>
+                            </select>
+                        </div>
+                        <div class="form-group rental-group mt-2">
+                            <label for="days" class="form-label">Number of Days </label>
+                            <select name="days" id="days" class="select-control required">
+                                <option value="1 day">1 day</option>
+                                <option value="2 days">2 days</option>
+                                <option value="3 days">3 days</option>
+                                <option value="4 days">4 days</option>
+                                <option value="5 days">5 days</option>
+                                <option value="6 days">6 days</option>
+                                <option value="7 days">7 days</option>
                             </select>
                         </div>
                         <div class="form-group rental-group mt-2">
