--- a/about.html
+++ b/about.html
@@ -162,51 +162,51 @@
             <div class="col-md-6">
               <a href="#un" class="text-decoration-none">
                <div class="service-content">
-                  <span><i class="la la-plus"></i> Light</span>
+                  <span><i class="la la-plus"></i> The Journey</span>
                </div>
               </a>
             </div>
             <div class="col-md-6">
               <a href="#un" class="text-decoration-none">
               <div class="service-content">
-                 <span><i class="la la-plus"></i> Audio Mixers</span>
+                 <span><i class="la la-plus"></i> Live broadcast / mulitimedia Event</span>
               </div>
             </a>
            </div>
            <div class="col-md-6">
             <a href="#un" class="text-decoration-none">
             <div class="service-content">
-               <span><i class="la la-plus"></i> Engineering Support</span>
+               <span><i class="la la-plus"></i> Films, TV drama and Stage production</span>
             </div>
           </a>
          </div>
          <div class="col-md-6">
           <a href="#un" class="text-decoration-none">
           <div class="service-content">
-             <span><i class="la la-plus"></i> Local Crew Sourcing</span>
+             <span><i class="la la-plus"></i> Documentaries</span>
           </div>
         </a>
        </div>
-       <!-- <div class="col-md-6">
+       <div class="col-md-6">
         <div class="service-content">
-           <span><i class="la la-plus"></i> Documentary</span>
+           <span><i class="la la-plus"></i> Commercials ad's and Cooperate branding production </span>
         </div>
      </div>
      <div class="col-md-6">
       <div class="service-content">
-         <span><i class="la la-plus"></i> Cooperate portfolio & events</span>
+         <span><i class="la la-plus"></i> Photography service</span>
       </div>
    </div>
    <div class="col-md-6">
     <div class="service-content">
-       <span><i class="la la-plus"></i> Wedding Videography service</span>
+       <span><i class="la la-plus"></i> Online / Social Media Content production</span>
     </div>
   </div>
   <div class="col-md-6">
     <div class="service-content">
-       <span><i class="la la-plus"></i> Reality TV Show</span>
+       <span><i class="la la-plus"></i> BTS productions</span>
     </div>
-  </div> -->
+  </div>
            </div>
   
            <!-- <div class="mt-4 text-center wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="0.6s">
